# arcdiscvist

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker-build.yml
arcdiscvist/: archive.py  builder.py  cli.py  color.py  config.py  exceptions.py  index.py  scanner.py  source.py  uploader.py  utils.py  writers.py
arcdiscvist/backends/: base.py  local.py  s3.py
arcdiscvist/tui/: __init__.py  app.py
arcdiscvist/tui/widgets/: index_tree.py
