[metadata]
name = arcdiscvist
version = attr: arcdiscvist.__version__
url = https://github.com/andrewgodwin/arcdiscvist
author = Andrew Godwin
author_email = andrew@aeracode.org
description = Archiving and indexing tool
long_description = file: README.rst

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
install_requires =
    click
    boto3
zip_safe = false

[options.entry_points]
console_scripts=
    arcdiscvist=arcdiscvist.cli:main

[tool:pytest]
testpaths = tests
addopts=--tb=short

[flake8]
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
